<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quiz_main_background"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16"
    tools:context="com.example.android.quizapp.QuizActivity">
    <!-- PROFILE LAYOUT ~~~~~~~~~~~~~~~~~~~~~~~-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dimen_4"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_2">

        <ImageView
            android:id="@+id/profile_image_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/profile_image_description_text"
            android:maxHeight="@dimen/dimen_profile_image"
            android:src="@drawable/profile_img" />

        <EditText
            android:id="@+id/profile_nickname_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_4"
            android:gravity="center"
            android:hint="@string/profile_nickname_text"
            android:imeOptions="actionDone"
            android:inputType="textPersonName|textCapWords"
            android:maxLength="10" />

        <RadioGroup
            android:id="@+id/profile_gender_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/profile_male_radio_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_male_text" />

            <RadioButton
                android:id="@+id/profile_female_radio_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_female_text" />
        </RadioGroup>

        <Button
            android:id="@+id/set_profile_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_small_button"
            android:layout_marginLeft="@dimen/dimen_8"
            android:layout_marginStart="@dimen/dimen_8"
            android:maxLines="2"
            android:text="@string/set_profile_button_text"
            android:textSize="@dimen/text_size_12" />
    </LinearLayout>

    <TextView
        android:id="@+id/welcome_text_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dimen_2"
        android:layout_weight="10"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textSize="@dimen/text_size_18" />

    <ListView
        android:id="@+id/question_list_view_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="55">

    </ListView>
    <!-- BOTTOM LAYOUT ~~~~~~~~~~~~~~~~~~~~~~~-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dimen_2">

        <TextView
            android:id="@+id/quiz_score_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/quiz_score_text"
            android:textSize="@dimen/text_size_24" />

        <Button
            android:id="@+id/score_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:background="@drawable/drawable_button"
            android:text="@string/score_button_text" />
    </LinearLayout>

</LinearLayout>
