<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_list_height_286"
    android:layout_margin="@dimen/dimen_4"
    android:background="@drawable/layer_background"
    android:minHeight="@dimen/dimen_list_height_286"
    android:orientation="vertical"
    android:padding="@dimen/dimen_2">

    <TextView
        android:id="@+id/main_question_type3_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/dimen_4"
        android:textSize="@dimen/text_size_18"
        android:maxLines="2"
        tools:text="Main Question... What is this?" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dimen_32"
        android:layout_marginRight="@dimen/dimen_32"
        android:layout_marginTop="@dimen/dimen_4"
        android:layout_marginBottom="@dimen/dimen_4"
        android:background="@color/colorTranspaBlack" />
    <!-- TOP ROW TWO IMAGES LAYOUT -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_4"
        android:paddingRight="@dimen/dimen_4">

        <ImageView
            android:id="@+id/image_answer_1"
            android:contentDescription="@string/image_description_one_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8"
            android:adjustViewBounds="true"
            tools:src="@drawable/profile_img" />

        <ImageView
            android:id="@+id/image_answer_2"
            android:contentDescription="@string/image_description_two_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8"
            android:adjustViewBounds="true"
            tools:src="@drawable/profile_img" />
    </LinearLayout>
    <!-- LAST ROW TWO IMAGES LAYOUT -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_4"
        android:paddingRight="@dimen/dimen_4">

        <ImageView
            android:id="@+id/image_answer_3"
            android:contentDescription="@string/image_description_three_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8"
            android:adjustViewBounds="true"
            tools:src="@drawable/profile_img" />

        <ImageView
            android:id="@+id/image_answer_4"
            android:contentDescription="@string/image_description_four_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8"
            android:adjustViewBounds="true"
            tools:src="@drawable/profile_img" />
    </LinearLayout>


</LinearLayout>